--- a/choropleth_map/style.css
+++ b/choropleth_map/style.css
@@ -48,3 +48,11 @@ body {
     width: 80%;
     height:auto;
 }
+
+#year-selector{
+    position: absolute;
+    top: 100px;
+    left:150px;
+    margin: 20px 0;
+    font-size: 14px;
+}
