--- a/bar_chart_race/style.css
+++ b/bar_chart_race/style.css
@@ -32,6 +32,11 @@ body {
     color: #266ac2 !important;
 }
 
+.nav-link svg {
+    margin-right: 10px;
+    transition: transform 0.3s ease, fill 0.3s ease;
+}
+
 .nav-link.active {
     color: white !important;
 }
