--- a/choropleth_map/style.css
+++ b/choropleth_map/style.css
@@ -28,6 +28,11 @@ body {
     color: rgba(255, 255, 255, 0.3) !important;
 }
 
+.nav-link svg {
+    margin-right: 10px;
+    transition: transform 0.3s ease, fill 0.3s ease;
+}
+
 .nav-link:hover {
     color: #266ac2 !important;
 }
